tdf#120787: fine-tune window flags w/ focus on floating toolbars

Floating toolbars are tool windows (Qt::Tool, not Qt::Window which
has a separate taskbar entry). They are frameles
(Qt::FramelessWindowHint) bc LibO takes care of drawing window
decorations itself. They also must be able to receive keyboard focus
(remove Qt::WindowDoesNotAcceptFocus)

Change-Id: I61e8a905fdc4fde1a64df5a0824d358036cfcdea